--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <title>Tajam</title>
 <link rel="stylesheet" href="css/custom.css">
 <link rel="stylesheet" href="css/1reset.css">
+<link rel="stylesheet" type="text/css" href="css/slick.css"/>
+<link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
+
 </head>
 <body>
 <div id="wrapper">
@@ -26,18 +29,15 @@
 						</ul>
 					</nav>
 				</div>
-				<div class="row c2 text-white psc blok">
-					<div class="title_area playfair">
-						<h2>We Are Awesome Creative Agency</h2>
-					</div>
+				<div class="row c2 text-white psc blok headerSlider">
+					<div class="item">
+						<div class="title_area playfair">
+							<h2>We Are Awesome Creative Agency</h2>
+						</div>
 						<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</p>
 						<a href="/" class="btn btn_padding">LEARN MORE</a>
-						<div class="slider">
-							<button type="button">1</button>
-							<button type="button">2</button>
-							<button type="button">3</button>
-							<button type="button">4</button>
-						</div>
+					</div>
+					<div class="item">2</div>
 				</div>
 			</div>
 		</div>
@@ -366,5 +366,8 @@
 		</div>
 	</div>	
 </footer>
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/custom.js"></script>
 </body>
 </html>
