добавил: текст для слайдеров и фавиконку

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tajam</title>
+<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 <link rel="stylesheet" href="css/custom.css">
 <link rel="stylesheet" href="css/1reset.css">
 <link rel="stylesheet" type="text/css" href="css/slick.css"/>
@@ -34,10 +35,23 @@
 						<div class="title_area playfair">
 							<h2>We Are Awesome Creative Agency</h2>
 						</div>
-						<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</p>
+							<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</p>
 						<a href="/" class="btn btn_padding">LEARN MORE</a>
 					</div>
-					<div class="item">2</div>
+					<div class="item">
+						<div class="title_area playfair">
+							<h2>Ooooooooy!</h2>
+						</div>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur ex alias aliquam dolores iure quae eveniet, quod suscipit, voluptatum voluptatem? Maxime minus veniam eaque ducimus, quas facere excepturi tempore adipisci nemo, quae. Neque asperiores porro sunt ullam nemo, incidunt cumque eveniet voluptates, sit aspernatur, ad tenetur enim dignissimos pariatur sequi.</p>
+						<a href="/" class="btn btn_padding">LEARN MORE</a>
+					</div>
+					<div class="item">
+						<div class="title_area playfair">
+							<h2>Wooooooooooow!</h2>
+						</div>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis explicabo dolorem ut doloremque, recusandae iusto, necessitatibus nostrum excepturi odit fugiat cumque? Consequatur, doloremque, facere amet laboriosam temporibus reprehenderit voluptatum itaque vel id illum ducimus ipsa consectetur animi soluta inventore molestias adipisci ipsam repellendus deleniti sapiente voluptatibus enim! Perspiciatis alias consequuntur, aspernatur, quae adipisci facere, minima architecto nostrum sapiente porro impedit.</p>
+						<a href="/" class="btn btn_padding">LEARN MORE</a>
+					</div>
 				</div>
 			</div>
 		</div>
